--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
         </main>
         
-            
+        <footer>
+            Data licensed from <a href="https://www.birdsnz.org.nz/"> <strong> Birds of New Zealand</strong> </a> 
+        </footer>
     </div>
 
 
